# cli-test-v2

./: .gitignore  cli.py  pyproject.toml  setup.py
cli/: cli.py  config.py  cookie.py  github.py
feml/: __init__.py  cli.py  config.py
feml/cli/: main.py
feml/cli/commands/: list_commands.py  template_commands.py
feml/cli/utils/: github.py  template.py
